--- a/src/html/options.html
+++ b/src/html/options.html
@@ -16,7 +16,7 @@
           <a href="#ruleeditor">Rule Editor</a>
         </li>
         <li>
-          <a href="#imports">Filesystem Imports</a>
+          <a href="#imports">Rule Imports</a>
         </li>
         <li>
           <a href="#about">About</a>
@@ -50,6 +50,29 @@
             </div>
             <div id="ruleeditor-ace"></div>
           </div>
+        </div>
+      </div>
+
+      <div id="imports">
+        <header>
+          <h1>Import of rules from another server</h1>
+        </header>
+        <div class="content">
+          <p>Here you can add rule definition files from other websites.</p>
+          <p>These rules will be merged with those from the <a href="#ruleeditor">ruleeditor</a>.</p>
+          <p>Please notice that chrome extensions like Form-O-Fill are not allowed to read files from you local fileystem (and that's a good thing).</p>
+          <ul class="ruleimports">
+            <li class="new-rule-url">
+              <div class="icon icon-plus">
+                <input type="url" placeholder="http://www.example.com/form-o-fill-rules.js"/>
+              </div>
+            </li>
+            <li class="new-rule-url">
+              <div class="icon icon-plus">
+                <input type="file" id="new-rule-local" name="localrules[]" multiple />
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
 
@@ -103,5 +126,6 @@
   <script src="../vendor/ace/ace.js" type="text/javascript" charset="utf-8"></script>
   <script src="../vendor/ace/mode-javascript.js" type="text/javascript" charset="utf-8"></script>
   <script src="../js/options/options.js" type="text/javascript"></script>
+  <script src="../js/options/optionsImports.js" type="text/javascript"></script>
 </body>
 </html>
